Dev and user separated

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <div id="app">Betöltés...</div>
   <script>
     window.$docsify = {
-      name: 'Házizz tudástár',
       repo: 'https://github.com/hazizz/hazizz-mobile',
       loadSidebar: true,
       coverpage: true,
       subMaxLevel: 2,
+
+      coverpage: ["/", "/dev/"],
 
       search: [],
 
