--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="icon" href="assets/icon.png" type="image/png">
 </head>
 
 <body>
+  <nav>
+    <a href="#/">HU</a>
+    <a disabled>EN</a>
+  </nav>
   <div id="app">Betöltés...</div>
   <script>
     window.$docsify = {
-      repo: 'https://github.com/hazizz/hazizz-mobile',
       loadSidebar: true,
       coverpage: true,
       subMaxLevel: 2,
@@ -41,8 +45,8 @@
       }
     }
   </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+  <script src="js/docsify.min.js"></script>
+  <script src="js/search.min.js"></script>
   <script src="//unpkg.com/docsify-copy-code"></script>
 </body>
 
