User documentation and developer documentation separated Moved to dev.hazizz.hu (github.com/hazizz/hazizz-devdocs)

--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
       coverpage: true,
       subMaxLevel: 2,
 
-      coverpage: ["/", "/dev/"],
-
-      search: [],
-
-      search: [
-        '/',  
-        '/dev.md' 
-      ],
-
       search: {
         maxAge: 86400000,
         paths: 'auto', 
@@ -41,7 +32,7 @@
         depth: 1,
 
         hideOtherSidebarContent: false,
-        namespace: 'website-1', 
+        namespace: 'haziz-faq', 
       }
     }
   </script>
